Add revised content

--- a/duck_code_editor/templates/duck_code_editor/break.html
+++ b/duck_code_editor/templates/duck_code_editor/break.html
@@ -3,12 +3,12 @@
 
 <div class="container">
   <h2>Let's take a break</h2>
-  <p>Here is a funny cat video, make sure to watch the entire thing:</p>
+  <p>Here is a funny cat video; make sure to watch the entire thing:</p>
   <!--include a youtube video-->
   <iframe
     width="560"
     height="315"
-    src="https://www.youtube.com/embed/JIjV73k3AxM?si=_7L3X37IOp_uvSuJ"
+    src="https://www.youtube.com/embed/kJ29xo2jjl8?si=E61tffmBW2ObPgov"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
