--- a/duck_code_editor/templates/duck_code_editor/rubber_duck_instructions.html
+++ b/duck_code_editor/templates/duck_code_editor/rubber_duck_instructions.html
@@ -2,11 +2,10 @@
 {% extends 'duck_exp/base.html' %} {% block content %}
 
 <div class="container">
-  <h2>Part 3: Rubber Duck Debugging</h2>
+  <h2>PART 3: Rubber Duck Debugging</h2>
   <p>
     This is the final part of the experiment. We will now introduce the concept
-    of rubber duck debugging. Please read the following text carefully, as it
-    will explain how to tackle the final task.
+    of rubber duck debugging. Please read the following text carefully.
   </p>
   <p>
     Rubber duck debugging is a technique where a programmer explains the code
@@ -21,7 +20,7 @@
     <p>CODER: <i>“Oh gosh! You’re right! There are no parentheses so b * c is happening first!</i></p>
   </div>
   <p>
-    We would now like to ask you to use rubber duck debugging in the final task. We will provide you with a virtual rubber duckie on your screen. Please state ALL your thoughts out loud. Do not just think your thoughts, but explicitly voice them. Really try to use the technique as extremely and thoroughly as possible. For the next ten minutes, the rubber duckie is your best friend. You are not being recorded.
+    We would now like to ask you to use rubber duck debugging in the final tasks. We will provide you with a virtual rubber duckie on your screen. Please state ALL your thoughts out loud. Do not just think your thoughts, but explicitly voice them. Really try to use the technique as extremely and thoroughly as possible. For the next tasks, the rubber duckie is your best friend. You are not being recorded.
   </p>
   <h4><b>For the next tasks, please work only <u>with rubber duck debugging</u>!</b><h4>
   <!--include a youtube video-->
