--- a/duck_code_editor/templates/duck_code_editor/survey.html
+++ b/duck_code_editor/templates/duck_code_editor/survey.html
@@ -2,6 +2,8 @@
 {% extends 'duck_exp/base.html' %} 
 {% block content %}
 
+{% comment %} add line between topics {% endcomment %}
+
 <div class="container">
   <h2>Post-Study survey</h2>
   <form method="post" action="">
