--- a/duck_code_editor/templates/duck_code_editor/start_experiment.html
+++ b/duck_code_editor/templates/duck_code_editor/start_experiment.html
@@ -3,12 +3,11 @@
 
 {% block content %}
 <div class="container">
-  <h2>Debugging in Python: A controlled experiment</h2>
-  <p>Thank you for participating in our research. Your answers to this form are crucial in giving us sufficient data to work with. The entire experiment consists of three debugging tasks, as well as a short questionnaire after each one. These tutorial messages will give you instructions as you go.  </p>
-  
-  <p>The only thing you should take care of now is that you are alone and have the time to finish the experiment in one go. The whole experience shouldn’t take more than 30 to 40 minutes.</p>
+  <h2>Debugging in Python: A Controlled Experiment</h2>
+  <p>Thank you for participating in our research. Your answers to this form are crucial in giving us sufficient data to work with. The entire experiment consists of three debugging tasks, as well as a short questionnaire after each one and a longer questionnaire at the end. These tutorial messages will give you instructions as you go. The only thing you should take care of now is that you are alone and have the time to finish the experiment in one go. The whole experience shouldn’t take more than 75 minutes.</p>
+  <p>The only thing you should take care of now is that you are alone and have the time to finish the experiment in one go. The whole experience shouldn’t take more than 60 minutes.</p>
 
-  <p> <b> Please select the id that Anastasia has e-mailed to you earlier this month. </b> </p>
+  <p><b>Please select the id that Anastasia has e-mailed to you earlier this month. </b></p>
 
   <form method="post" action="{% url 'duck_code_editor:start_experiment' %}">
     {% csrf_token %}
