--- a/duck_code_editor/templates/duck_code_editor/without_duck_instructions.html
+++ b/duck_code_editor/templates/duck_code_editor/without_duck_instructions.html
@@ -2,7 +2,7 @@
 {% extends 'duck_exp/base.html' %} {% block content %}
 
 <div class="container">
-  <h2>Part 2: Silent Debugging</h2>
+  <h2>PART 2: Silent Debugging</h2>
   <p>
     From this point on, the real experiment will start. Please try to work at a
     pace and concentration level that feels natural to you. Do not try to rush
