--- a/duck_code_editor/templates/duck_code_editor/start_experiment.html
+++ b/duck_code_editor/templates/duck_code_editor/start_experiment.html
@@ -4,8 +4,7 @@
 {% block content %}
 <div class="container">
   <h2>Debugging in Python: A Controlled Experiment</h2>
-  <p>Thank you for participating in our research. Your answers to this form are crucial in giving us sufficient data to work with. The entire experiment consists of three debugging tasks, as well as a short questionnaire after each one and a longer questionnaire at the end. These tutorial messages will give you instructions as you go. The only thing you should take care of now is that you are alone and have the time to finish the experiment in one go. The whole experience shouldn’t take more than 75 minutes.</p>
-  <p>The only thing you should take care of now is that you are alone and have the time to finish the experiment in one go. The whole experience shouldn’t take more than 60 minutes.</p>
+  <p>Thank you for participating in our research. Your answers to this form are crucial in giving us sufficient data to work with. The entire experiment consists of three debugging tasks, as well as a short questionnaire after each one and a longer questionnaire at the end. These tutorial messages will give you instructions as you go. The only thing you should take care of now is that you are alone and have the time to finish the experiment in one go. The whole experiment should maximally take 75 minutes.</p>
 
   <p><b>Please select the id that Anastasia has e-mailed to you earlier this month. </b></p>
 
@@ -22,8 +21,6 @@
 
     <div>
       <small> In case you are not entirely sure which id you have been assigned, generate a random one. Please write down the id and send it to Anastasia. </small>
-      {% comment %} 
-      <button class="btn btn-outline-primary btn-sm" name="generate" type="submit">Generate random id</button> {% endcomment %}
       <button class="btn btn-link btn-sm" name="generate" type="submit">Generate random id</button> 
     </div>
 
