--- a/duck_code_editor/templates/duck_code_editor/survey_complete.html
+++ b/duck_code_editor/templates/duck_code_editor/survey_complete.html
@@ -3,6 +3,6 @@
 
 <div class="container">
   <h2>Survey Complete</h2>
-  <p>Thank you for completing the survey!</p>
+  <p>You have now reached the end of our experiment. Thank you for completing the survey!</p>
 </div>
 {% endblock %}
