--- a/duck_code_editor/templates/duck_code_editor/instructions.html
+++ b/duck_code_editor/templates/duck_code_editor/instructions.html
@@ -45,8 +45,7 @@
     </li>
     <li>
       <p>
-        Do NOT use external tools during debugging. You may only rely on your
-        own knowledge.
+        Do NOT use ANY external tools (ChatGPT, web browser, …) during debugging. You may only rely on your own knowledge. All bugs can be solved with basic Python statements.
       </p>
     </li>
 
@@ -70,6 +69,12 @@
         When you think your code is corrected, or when you decide you cannot fix
         it, please press next. You will not be able to return after proceeding,
         so make sure you are certain that you are done before moving on.
+      </p>
+    </li>
+
+    <li>
+      <p>
+        There is a 10-minute time limit on each task.
       </p>
     </li>
   </ol>
