--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -39,7 +39,7 @@
   display: flex;
   justify-content: space-between;
   width: 700px; /* Adjust the width as needed */
-  height: 100px;
+  height: 80px;
   margin-left: 30px;
 }
 
@@ -50,4 +50,10 @@
 .likert-label {
   display: block;
   margin-bottom: 5px;
+}
+
+.horizontal-line {
+  border-top: 2px solid #212529; /* Adjust color as needed */
+  margin-top: 10px; /* Adjust margin as needed */
+  margin-bottom: 20px;
 }
