Minor change to start instructions

--- a/duck_code_editor/templates/duck_code_editor/start_experiment.html
+++ b/duck_code_editor/templates/duck_code_editor/start_experiment.html
@@ -20,7 +20,7 @@
     </span>
 
     <div>
-      <small> In case you are not entirely sure which id you have been assigned, generate a random one. Please write down the id and send it to Anastasia. </small>
+      <small> In case you are not entirely sure which id you have been assigned to or your id is unexpectedly not available anymore, generate a random one. Please write down the generated id and send it to Anastasia. </small>
       <button class="btn btn-link btn-sm" name="generate" type="submit">Generate random id</button> 
     </div>
 
