Fix saving of survey data

--- a/duck_code_editor/templates/duck_code_editor/survey.html
+++ b/duck_code_editor/templates/duck_code_editor/survey.html
@@ -230,230 +230,230 @@
             <div class="likert-options">
                 <label class="likert-option">
                 <span class="likert-label">Strongly Disagree</span>
-                <input type="radio" name="big_five_1" value="Strongly Disagree" required/>
+                <input type="radio" name="big_five_q1" value="Strongly Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Disagree</span>
-                <input type="radio" name="big_five_1" value="Somewhat Disagree" required/>
+                <input type="radio" name="big_five_q1" value="Somewhat Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Neutral</span>
-                <input type="radio" name="big_five_1" value="Neutral" required />
+                <input type="radio" name="big_five_q1" value="Neutral" required />
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Agree</span>
-                <input type="radio" name="big_five_1" value="Somewhat Agree"  required/>
+                <input type="radio" name="big_five_q1" value="Somewhat Agree"  required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Strongly Agree</span>
-                <input type="radio" name="big_five_1" value="Strongly Agree" required/>
+                <input type="radio" name="big_five_q1" value="Strongly Agree" required/>
                 </label>
             </div>
             <p>2. I see myself as someone who is generally trusting.</p>
             <div class="likert-options">
                 <label class="likert-option">
                 <span class="likert-label">Strongly Disagree</span>
-                <input type="radio" name="big_five_2" value="Strongly Disagree" required/>
+                <input type="radio" name="big_five_q2" value="Strongly Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Disagree</span>
-                <input type="radio" name="big_five_2" value="Somewhat Disagree" required/>
+                <input type="radio" name="big_five_q2" value="Somewhat Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Neutral</span>
-                <input type="radio" name="big_five_2" value="Neutral" required />
+                <input type="radio" name="big_five_q2" value="Neutral" required />
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Agree</span>
-                <input type="radio" name="big_five_2" value="Somewhat Agree"  required/>
+                <input type="radio" name="big_five_q2" value="Somewhat Agree"  required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Strongly Agree</span>
-                <input type="radio" name="big_five_2" value="Strongly Agree" required/>
+                <input type="radio" name="big_five_q2" value="Strongly Agree" required/>
                 </label>
             </div>
             <p>3. I see myself as someone who tends to be lazy.</p>
             <div class="likert-options">
                 <label class="likert-option">
                 <span class="likert-label">Strongly Disagree</span>
-                <input type="radio" name="big_five_3" value="Strongly Disagree" required/>
+                <input type="radio" name="big_five_q3" value="Strongly Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Disagree</span>
-                <input type="radio" name="big_five_3" value="Somewhat Disagree" required/>
+                <input type="radio" name="big_five_q3" value="Somewhat Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Neutral</span>
-                <input type="radio" name="big_five_3" value="Neutral" required />
+                <input type="radio" name="big_five_q3" value="Neutral" required />
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Agree</span>
-                <input type="radio" name="big_five_3" value="Somewhat Agree"  required/>
+                <input type="radio" name="big_five_q3" value="Somewhat Agree"  required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Strongly Agree</span>
-                <input type="radio" name="big_five_3" value="Strongly Agree" required/>
+                <input type="radio" name="big_five_q3" value="Strongly Agree" required/>
                 </label>
             </div>
             <p>4. I see myself as someone who is relaxed, handles stress well.</p>
             <div class="likert-options">
                 <label class="likert-option">
                 <span class="likert-label">Strongly Disagree</span>
-                <input type="radio" name="big_five_4" value="Strongly Disagree" required/>
+                <input type="radio" name="big_five_q4" value="Strongly Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Disagree</span>
-                <input type="radio" name="big_five_4" value="Somewhat Disagree" required/>
+                <input type="radio" name="big_five_q4" value="Somewhat Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Neutral</span>
-                <input type="radio" name="big_five_4" value="Neutral" required />
+                <input type="radio" name="big_five_q4" value="Neutral" required />
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Agree</span>
-                <input type="radio" name="big_five_4" value="Somewhat Agree"  required/>
+                <input type="radio" name="big_five_q4" value="Somewhat Agree"  required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Strongly Agree</span>
-                <input type="radio" name="big_five_4" value="Strongly Agree" required/>
+                <input type="radio" name="big_five_q4" value="Strongly Agree" required/>
                 </label>
             </div>
             <p>5. I see myself as someone who has few artistic interests.          </p>
             <div class="likert-options">
                 <label class="likert-option">
                 <span class="likert-label">Strongly Disagree</span>
-                <input type="radio" name="big_five_5" value="Strongly Disagree" required/>
+                <input type="radio" name="big_five_q5" value="Strongly Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Disagree</span>
-                <input type="radio" name="big_five_5" value="Somewhat Disagree" required/>
+                <input type="radio" name="big_five_q5" value="Somewhat Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Neutral</span>
-                <input type="radio" name="big_five_5" value="Neutral" required />
+                <input type="radio" name="big_five_q5" value="Neutral" required />
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Agree</span>
-                <input type="radio" name="big_five_5" value="Somewhat Agree"  required/>
+                <input type="radio" name="big_five_q5" value="Somewhat Agree"  required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Strongly Agree</span>
-                <input type="radio" name="big_five_5" value="Strongly Agree" required/>
+                <input type="radio" name="big_five_q5" value="Strongly Agree" required/>
                 </label>
             </div>
             <p>6. I see myself as someone who is outgoing, sociable.          </p>
             <div class="likert-options">
                 <label class="likert-option">
                 <span class="likert-label">Strongly Disagree</span>
-                <input type="radio" name="big_five_6" value="Strongly Disagree" required/>
+                <input type="radio" name="big_five_q6" value="Strongly Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Disagree</span>
-                <input type="radio" name="big_five_6" value="Somewhat Disagree" required/>
+                <input type="radio" name="big_five_q6" value="Somewhat Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Neutral</span>
-                <input type="radio" name="big_five_6" value="Neutral" required />
+                <input type="radio" name="big_five_q6" value="Neutral" required />
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Agree</span>
-                <input type="radio" name="big_five_6" value="Somewhat Agree"  required/>
+                <input type="radio" name="big_five_q6" value="Somewhat Agree"  required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Strongly Agree</span>
-                <input type="radio" name="big_five_6" value="Strongly Agree" required/>
+                <input type="radio" name="big_five_q6" value="Strongly Agree" required/>
                 </label>
             </div>
             <p>7. I see myself as someone who tends to find fault with others.          </p>
             <div class="likert-options">
                 <label class="likert-option">
                 <span class="likert-label">Strongly Disagree</span>
-                <input type="radio" name="big_five_7" value="Strongly Disagree" required/>
+                <input type="radio" name="big_five_q7" value="Strongly Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Disagree</span>
-                <input type="radio" name="big_five_7" value="Somewhat Disagree" required/>
+                <input type="radio" name="big_five_q7" value="Somewhat Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Neutral</span>
-                <input type="radio" name="big_five_7" value="Neutral" required />
+                <input type="radio" name="big_five_q7" value="Neutral" required />
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Agree</span>
-                <input type="radio" name="big_five_7" value="Somewhat Agree"  required/>
+                <input type="radio" name="big_five_q7" value="Somewhat Agree"  required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Strongly Agree</span>
-                <input type="radio" name="big_five_7" value="Strongly Agree" required/>
+                <input type="radio" name="big_five_q7" value="Strongly Agree" required/>
                 </label>
             </div>
             <p>8. I see myself as someone who does a thorough job.          </p>
             <div class="likert-options">
                 <label class="likert-option">
                 <span class="likert-label">Strongly Disagree</span>
-                <input type="radio" name="big_five_8" value="Strongly Disagree" required/>
+                <input type="radio" name="big_five_q8" value="Strongly Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Disagree</span>
-                <input type="radio" name="big_five_8" value="Somewhat Disagree" required/>
+                <input type="radio" name="big_five_q8" value="Somewhat Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Neutral</span>
-                <input type="radio" name="big_five_8" value="Neutral" required />
+                <input type="radio" name="big_five_q8" value="Neutral" required />
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Agree</span>
-                <input type="radio" name="big_five_8" value="Somewhat Agree"  required/>
+                <input type="radio" name="big_five_q8" value="Somewhat Agree"  required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Strongly Agree</span>
-                <input type="radio" name="big_five_8" value="Strongly Agree" required/>
+                <input type="radio" name="big_five_q8" value="Strongly Agree" required/>
                 </label>
             </div>
             <p>9. I see myself as someone who gets nervous easily.                  </p>
             <div class="likert-options">
                 <label class="likert-option">
                 <span class="likert-label">Strongly Disagree</span>
-                <input type="radio" name="big_five_9" value="Strongly Disagree" required/>
+                <input type="radio" name="big_five_q9" value="Strongly Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Disagree</span>
-                <input type="radio" name="big_five_9" value="Somewhat Disagree" required/>
+                <input type="radio" name="big_five_q9" value="Somewhat Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Neutral</span>
-                <input type="radio" name="big_five_9" value="Neutral" required />
+                <input type="radio" name="big_five_q9" value="Neutral" required />
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Agree</span>
-                <input type="radio" name="big_five_9" value="Somewhat Agree"  required/>
+                <input type="radio" name="big_five_q9" value="Somewhat Agree"  required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Strongly Agree</span>
-                <input type="radio" name="big_five_9" value="Strongly Agree" required/>
+                <input type="radio" name="big_five_q9" value="Strongly Agree" required/>
                 </label>
             </div>
             <p>10. I see myself as someone who has an active imagination.                    </p>
             <div class="likert-options">
                 <label class="likert-option">
                 <span class="likert-label">Strongly Disagree</span>
-                <input type="radio" name="big_five_10" value="Strongly Disagree" required/>
+                <input type="radio" name="big_five_q10" value="Strongly Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Disagree</span>
-                <input type="radio" name="big_five_10" value="Somewhat Disagree" required/>
+                <input type="radio" name="big_five_q10" value="Somewhat Disagree" required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Neutral</span>
-                <input type="radio" name="big_five_10" value="Neutral" required />
+                <input type="radio" name="big_five_q10" value="Neutral" required />
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Somewhat Agree</span>
-                <input type="radio" name="big_five_10" value="Somewhat Agree"  required/>
+                <input type="radio" name="big_five_q10" value="Somewhat Agree"  required/>
                 </label>
                 <label class="likert-option">
                 <span class="likert-label">Strongly Agree</span>
-                <input type="radio" name="big_five_10" value="Strongly Agree" required/>
+                <input type="radio" name="big_five_q10" value="Strongly Agree" required/>
                 </label>
             </div>
         </div>
